exploring-hashi-vault-04-20/database-secrets-injector/gke/vault-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/redirect-to-https: "true"
  name: vault
spec:
  rules:
  - host: vault.arctiqtim.team.arctiq.ca
    http:
      paths:
      - backend:
          serviceName: vault-ui
          servicePort: 8200
  tls:
  - hosts:
    - vault.arctiqtim.team.arctiq.ca
